# delineate

./: .gitignore  AGENTS.md  CHANGELOG.rst  README.rst  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
docs/: conf.py  index.rst  usage.rst
src/delineate/: client.py  downloads.py  exceptions.py  export.py  main.py  queries.py
tests/: helpers.py  test_client.py  test_downloads.py  test_main.py  test_main_auth.py  test_main_export.py
