[project]
name = "delineate"
version = "1.0.0"
description = "Backup and export data from Linear."
readme = "README.rst"
authors = [
    { name = "Chris Withers", email = "chris@withers.org" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2",
    "httpx>=0.28",
    "enlighten>=1.14.1",
]

[project.urls]
"Homepage" = "https://delineate.readthedocs.io/"
"Documentation" = "https://delineate.readthedocs.io/"
"Repository" = "https://github.com/cjw296/delineate"

[project.scripts]
delineate = "delineate.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "sphinx>=8.1.3,<9.0",
]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-httpx>=0.35",
    "testfixtures>=9.0.1",
]

[tool.hatch.build.targets.sdist]
packages = ["src/delineate"]

[tool.mypy]
strict= true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "enlighten.*"
ignore_missing_imports = true

[tool.pytest.ini_options]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "preserve"

[tool.coverage.report]
exclude_also = [
    "\\.\\.\\.",
]
